--- a/app/src/main/res/layout/activity_add_word_target.xml
+++ b/app/src/main/res/layout/activity_add_word_target.xml
@@ -31,7 +31,8 @@
                     android:layout_height="40dp"
                     android:layout_centerVertical="true"
                     android:layout_margin="10dp"
-                    android:src="@drawable/ic_back_arraw" />
+                    android:src="@drawable/ic_back_arraw"
+                    android:layout_alignParentLeft="true"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -62,7 +63,8 @@
                         android:layout_height="wrap_content"
                         android:layout_alignBaseline="@id/keyword"
                         android:layout_marginTop="5dp"
-                        android:text="enter recognise Word :" />
+                        android:text="enter recognise Word :"
+                        android:layout_alignParentLeft="true"/>
 
 
                     <EditText
@@ -71,7 +73,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:layout_toRightOf="@id/Tv1"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:layout_alignParentRight="true"/>
 
 
                     <TextView
@@ -80,7 +83,8 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/Tv1"
                         android:layout_alignBaseline="@id/bookName"
-                        android:text="enter Book name :" />
+                        android:text="enter Book name :"
+                        android:layout_alignParentLeft="true"/>
 
 
                     <EditText
@@ -89,7 +93,8 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/keyword"
                         android:layout_toRightOf="@id/Tv2"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:layout_alignParentRight="true"/>
 
 
                     <TextView
@@ -99,7 +104,8 @@
                         android:layout_below="@id/Tv2"
                         android:layout_alignBaseline="@id/title"
                         android:paddingEnd="10dp"
-                        android:text="Comment :" />
+                        android:text="Comment :"
+                        android:layout_alignParentLeft="true"/>
 
 
                     <EditText
@@ -108,7 +114,8 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/bookName"
                         android:layout_toRightOf="@id/Tv3"
-                        android:inputType="textMultiLine" />
+                        android:inputType="textMultiLine"
+                        android:layout_alignParentRight="true"/>
 
 
                     <RelativeLayout
@@ -123,15 +130,17 @@
                             android:id="@+id/fileUpload"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/ic_cloud_upload" />
+                            android:src="@drawable/ic_cloud_upload"
+                            android:layout_alignParentStart="true"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="30dp"
-                            android:layout_toRightOf="@id/fileUpload"
+                            android:layout_toEndOf="@id/fileUpload"
                             android:gravity="center"
                             android:paddingStart="5dp"
-                            android:text="upluad File you want to Show" />
+                            android:text="upluad File you want to Show"
+                            />
 
 
                     </RelativeLayout>
