--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -22,7 +22,8 @@
             android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_margin="10dp"
-            android:src="@drawable/ic_back_arraw" />
+            android:src="@drawable/ic_back_arraw"
+            android:layout_alignParentLeft="true"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -46,7 +47,10 @@
         android:id="@+id/pdfRL"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="55dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="30dp">
 
 
         <com.github.barteksc.pdfviewer.PDFView
