--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="primaryLightColor">#4b7681</color>
     <color name="primaryDarkColor">#00222c</color>
     <color name="primaryTextColor">#ff0000</color>
+    <color name="transparent">#00000000</color>
+
 </resources>
